# Motor.Telemetry.Protobuf

./: CMakeLists.txt
docs/: Architecture.md
public/PiSubmarine/Motor/Telemetry/Protobuf/: Deserializer.h  ErrorCode.h  Serializer.h
src/: CMakeLists.txt
src/PiSubmarine/Motor/Telemetry/Protobuf/: Deserializer.cpp  ErrorCode.cpp  Motor.proto  Serializer.cpp
test/: CMakeLists.txt
test/PiSubmarine/Motor/Telemetry/Protobuf/: DeserializerTest.cpp  ErrorCodeTest.cpp  SerializerTest.cpp
